add android and wasm of multiplatform demo app

--- a/.gitignore
+++ b/.gitignore
@@ -13,3 +13,15 @@
 .externalNativeBuild
 .cxx
 local.properties
+
+**/build/
+xcuserdata
+!src/**/build/
+#.idea
+captures
+*.xcodeproj/*
+!*.xcodeproj/project.pbxproj
+!*.xcodeproj/xcshareddata/
+!*.xcodeproj/project.xcworkspace/
+!*.xcworkspace/contents.xcworkspacedata
+**/xcshareddata/WorkspaceSettings.xcsettings
