--- a/gradle.properties
+++ b/gradle.properties
@@ -24,3 +24,7 @@ android.nonTransitiveRClass=true
 
 ### Compose Multiplatform ###
 org.jetbrains.compose.experimental.wasm.enabled=true
+
+github-repo-name=composable-table
+artifact-name=Composable Table
+artifact-description=An Android Jetpack Compose library that provides a `@Composable` table with automatic layouts.
