update README for multiplatform changes

--- a/gradle.properties
+++ b/gradle.properties
@@ -27,4 +27,4 @@ org.jetbrains.compose.experimental.wasm.enabled=true
 
 github-repo-name=composable-table
 artifact-name=Composable Table
-artifact-description=An Android Jetpack Compose library that provides a `@Composable` table with automatic layouts.
+artifact-description=A multiplaform Jetpack Compose library that provides a `@Composable` table with automatic layouts.
