fix WASM demo cannot display Unicode characters by a workaround (#6)

--- a/gradle.properties
+++ b/gradle.properties
@@ -24,6 +24,7 @@ android.nonTransitiveRClass=true
 
 ### Compose Multiplatform ###
 org.jetbrains.compose.experimental.wasm.enabled=true
+kotlin.mpp.applyDefaultHierarchyTemplate=false
 
 github-repo-name=composable-table
 artifact-name=Composable Table
